--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "mongodb": "^4.1.0"
+    "mongodb": "^4.1.0",
+    "multer": "^1.4.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
